--- a/responsive-typography-generator.html
+++ b/responsive-typography-generator.html
@@ -230,7 +230,7 @@
         <div class="text-center mb-12">
             <h1 class="text-fluid-5xl font-bold text-gray-900 mb-4">Responsive Typography Generator</h1>
             <p class="text-fluid-lg text-gray-600 max-w-3xl mx-auto">
-                Generate fluid, responsive typography using Tailwind CSS v4 variables and modern CSS clamp() functions. 
+                Generate fluid, responsive typography using Tailwind CSS variables and modern CSS clamp() functions. 
                 Control your type system with precision across all screen sizes.
             </p>
         </div>
